update make file

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ COMPOSE_PROJECT_NAME=tosca_api_dev
 PG_HOST=db
 PG_PORT=5438
 PG_DATABASE=tosca
-PG_DOCKER_PORT=5432
+PG_DOCKER_PORT=5432 # dont change this, it's the internal docker port
 
 # PostgreSQL superuser
 PG_SUPERUSER=postgres
