tosca_api.apps.authentication.utils.PyJWKClient to tosca_api.apps.core.jwt_utils.PyJWKClient in all test functions

--- a/.env.example
+++ b/.env.example
@@ -120,3 +120,7 @@ KEYCLOAK_SERVER_URL=http://keycloak:8080/auth/
 KEYCLOAK_REALM=test 
 KEYCLOAK_CLIENT_ID=django-dev
 KEYCLOAK_CLIENT_SECRET=
+# JWKS endpoint and issuer (used by backend to verify tokens)
+# KEYCLOAK_JWKS_URL can be left empty to use the server/realm default
+KEYCLOAK_JWKS_URL=
+KEYCLOAK_ISSUER=
