feat: implement structured logging strategy with security-focused events

--- a/.env.example
+++ b/.env.example
@@ -120,7 +120,8 @@ KEYCLOAK_SERVER_URL=http://keycloak:8080/auth/
 KEYCLOAK_REALM=test 
 KEYCLOAK_CLIENT_ID=django-dev
 KEYCLOAK_CLIENT_SECRET=
-# JWKS endpoint and issuer (used by backend to verify tokens)
-# KEYCLOAK_JWKS_URL can be left empty to use the server/realm default
-KEYCLOAK_JWKS_URL=
-KEYCLOAK_ISSUER=
+# JWKS endpoint and issuer (used by backend to verify tokens) - REQUIRED
+KEYCLOAK_JWKS_URL=http://keycloak:8080/auth/realms/test/protocol/openid-connect/certs
+KEYCLOAK_ISSUER=http://keycloak:8080/auth/realms/test
+# List of allowed audiences for JWT tokens - REQUIRED
+ALLOWED_TOKEN_AUDIENCES=django-dev,geoserver,account
