--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "django-allauth>=65.13.1",
     "dj-rest-auth>=7.0.1",
     "ruff>=0.14.7",
+    "python-json-logger>=4.0.0",
 ]
 
 [project.optional-dependencies]
@@ -50,5 +51,7 @@ python-preference = "managed"
 
 [dependency-groups]
 dev = [
+    "pytest>=9.0.1",
+    "pytest-django>=4.11.1",
     "ruff>=0.14.7",
 ]
