Update MakeFile and Readme

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@
 # GLOBAL
 ############################
 COMPOSE_PROJECT_NAME=tosca_api_dev
+ENV_TYPE=development
+ENV_FILE=.env.dev
 # COMPOSE_FILE=/Users/hsadmin/Desktop/coding/dcs-django-api/docker-compose-dev.yml
 # HOST_INIT_DIR=/Users/hsadmin/Desktop/coding/dcs-django-api/docker/geoserver_docker/docker/geoserver-init
 ############################
