--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,12 +3,11 @@ services:
     image: postgis/postgis:16-3.4
     container_name: tosca-db
     env_file:
-      - .env.dev
+      - ${ENV_FILE}
     environment:
       POSTGRES_DB: ${PG_DATABASE}
       POSTGRES_USER: ${PG_SUPERUSER}
       POSTGRES_PASSWORD: ${PG_SUPERPASS}
-      # initdb script'lerin kullanıyorsa bunları da geçiyoruz:
       PG_API_USER: ${PG_API_USER}
       PG_API_PASSWORD: ${PG_API_PASSWORD}
       PG_GS_USER: ${PG_GS_USER}
@@ -20,7 +19,7 @@ services:
       - "${PG_PORT}:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
-      - ./docker/geoserver_docker/docker/initdb:/docker-entrypoint-initdb.d
+      - ./docker/postgis/initdb:/docker-entrypoint-initdb.d
     healthcheck:
       test:
         [
@@ -36,12 +35,13 @@ services:
     image: ghcr.io/digitalcityscience/tosca-geoserver:latest
     container_name: tosca-geoserver
     env_file:
-      - .env.dev
+      - ${ENV_FILE}
     ports:
       - "${GEOSERVER_PORT}:8080"
     volumes:
       - geoserver_data:/geoserver_data/data
-      - /Users/hsadmin:/mnt/home
+      # add to local data into container
+      # /home/user/geoserver_data:/mnt/geoserver_data
     depends_on:
       db:
         condition: service_healthy
@@ -58,9 +58,9 @@ services:
       dockerfile: docker/django/Dockerfile
     container_name: tosca-django
     env_file:
-      - .env.dev
+      - ${ENV_FILE}
     environment:
-      DJANGO_SETTINGS_MODULE: tosca_api.settings.development
+      DJANGO_SETTINGS_MODULE: tosca_api.settings.${ENV_TYPE}
       DATABASE_URL: postgresql://${PG_API_USER}:${PG_API_PASSWORD}@db:5432/${PG_DATABASE}
     volumes:
       - .:/app
