--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "ruff>=0.14.7",
     "python-json-logger>=4.0.0",
     "nh3>=0.3.2",
+    "drf-spectacular>=0.29.0",
 ]
 
 [project.optional-dependencies]
