--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-json-logger>=4.0.0",
     "nh3>=0.3.2",
     "drf-spectacular>=0.29.0",
+    "djangorestframework-gis>=1.2.0",
 ]
 
 [project.optional-dependencies]
